added asap font

--- a/_process/scss/style.scss
+++ b/_process/scss/style.scss
@@ -1,1 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Asap:700');
+
 @import '../../node_modules/bootstrap/scss/bootstrap';
+
+.h2,
+.h4 {
+  font-family: Asap;
+}
