Added Animate.css styles

--- a/_process/scss/style.scss
+++ b/_process/scss/style.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Asap:700');
 
 @import '../../node_modules/bootstrap/scss/bootstrap';
+@import '../../node_modules/animate.css/animate';
 
 .h2,
 .h4 {
