added styles for code blocks

--- a/_process/scss/style.scss
+++ b/_process/scss/style.scss
@@ -2,6 +2,7 @@
 
 @import '../../node_modules/bootstrap/scss/bootstrap';
 @import '../../node_modules/animate.css/animate';
+@import '../prism/prism-xonokai';
 
 .h2,
 .h4 {
