--- a/_process/scss/style.scss
+++ b/_process/scss/style.scss
@@ -9,3 +9,17 @@
 .h4 {
   font-family: Asap;
 }
+
+.site-header {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.site-nav.inbody {
+  background: rgb(11, 114, 155);
+}
+
+.layout-social {
+  font-size: 1.4em;
+}
