added new color to maps called special

--- a/_process/scss/_custom.scss
+++ b/_process/scss/_custom.scss
@@ -5,3 +5,7 @@ $body-bg: #393e46;
 $text-muted: #6c757d;
 $body-color: $text-muted;
 $border-radius: 8px;
+
+$theme-colors: (
+  'special': #e01c55
+);
