shadows, gradients and roundd

--- a/_process/scss/_custom.scss
+++ b/_process/scss/_custom.scss
@@ -9,6 +9,8 @@ $border-radius: 8px;
 $enable-responsive-font-sizes: true;
 $rfs-base-font-size: 1rem;
 
+$enable-shadows: true;
+
 $theme-colors: (
   'special': #e01c55
 );
