--- a/_process/scss/_custom.scss
+++ b/_process/scss/_custom.scss
@@ -8,6 +8,7 @@ $border-radius: 8px;
 
 $enable-responsive-font-sizes: true;
 $rfs-base-font-size: 1rem;
+$enable-caret: false;
 
 $enable-shadows: true;
 
