--- a/_process/scss/_custom.scss
+++ b/_process/scss/_custom.scss
@@ -30,3 +30,20 @@ $spacers: (
 $sizes: (
   33: 33%
 );
+
+$grid-breakpoints: (
+  xs: 0,
+  sm: 320px,
+  //576px
+    md: 768px,
+  lg: 992px,
+  xl: 1200px
+);
+
+$container-max-widths: (
+  sm: 320px,
+  //540px
+    md: 720px,
+  lg: 960px,
+  xl: 1140px
+);
