added pagination changes

--- a/_process/scss/_custom.scss
+++ b/_process/scss/_custom.scss
@@ -49,3 +49,16 @@ $container-max-widths: (
 );
 
 $grid-gutter-width: 16px;
+
+$pagination-bg: $primary;
+$pagination-color: darken($primary, 20%);
+$pagination-border-color: darken($body-bg, 7%);
+
+$pagination-active-bg: $secondary;
+$pagination-active-border-color: darken($body-bg, 7%);
+
+$pagination-disabled-bg: darken($body-bg, 3%);
+$pagination-disabled-border-color: darken($body-bg, 7%);
+
+$pagination-hover-bg: $secondary;
+$pagination-hover-border-color: darken($body-bg, 7%);
